@@ -59,6 +59,7 @@ typedef struct account_char_struct {
     const char *face;         /**< Face of this character */
     const char *party;        /**< Character this party belonged to */
     const char *map;          /**< Last map this character was on */
+    uint8 isDead;             /**< Should stay at zero if alive, anything else if dead (hopefully 1, but doesn't have to be) */
     struct account_char_struct  *next;
 } Account_Char;
 
