@@ -1931,6 +1931,9 @@ void send_account_players(socket_struct *ns)
 
     /* Now add real character data */
     for (acn = ns->account_chars; acn; acn = acn->next) {
+        /* Ignore a dead character. They don't need to show up. */
+        if (acn->isDead)
+            continue;
         uint16 faceno;
 
         add_char_field(&sl, ACL_NAME, acn->name);
